--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="#" target="_blank">Rodrigo Martins</a> para o CursoemVideo</p>
+        <p>Site criado por <a href="https://github.com/rodrigomartins93" target="_blank">Rodrigo Martins</a> para o CursoemVideo</p>
     </footer>
 </body>
 </html>
